--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,8 @@
   </head>
 
   <body class="bg-white font-sans">
-    <header class="flex flex-col mt-[50px] mb-[154px]">
-      <div
-        class="w-[1108px] flex justify-between items-center mb-[67px] mx-auto"
-      >
+    <header class="max-w-[69.25rem] flex flex-col mt-[50px] mb-[154px] mx-auto">
+      <div class="flex justify-between items-center mb-[67px]">
         <img src="/assets/logo.svg" alt="Suite logo" />
         <a
           class="items-center border rounded-[6px] border-[#172339] py-[12px] px-[25px] text-blue-dark font-bold"
@@ -30,7 +28,7 @@
         >
       </div>
 
-      <div class="w-[1110px] flex flex-row gap-[96px] mx-auto">
+      <div class="max-w-[69.375rem] flex flex-row gap-[96px]">
         <div class="flex flex-col z-[2] relative pr-[12rem] py-[3.105rem]">
           <div class="absolute top-0 right-0 z-[-1] w-[350px] h-[600px]">
             <img
