--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
       <div class="flex justify-between items-center mb-[67px]">
         <img src="/assets/logo.svg" alt="Suite logo" />
         <a
-          class="items-center border rounded-[6px] border-[#172339] py-[12px] px-[25px] text-blue-dark font-bold"
+          class="items-center border rounded-[6px] border-[#172339] py-[12px] px-[25px] text-blue-dark font-bold hover:bg-blue-dark hover:text-white"
           href="#"
           >Request Beta Access</a
         >
@@ -54,7 +54,7 @@
               to get more leads for your company.
             </p>
             <a
-              class="rounded-[6px] py-[15px] px-[32px] text-white bg-blue-dark font-bold inline-flex"
+              class="rounded-[6px] py-[15px] px-[32px] text-white bg-blue-dark font-bold inline-flex hover:bg-gradient-to-br hover:from-[#A060FF] hover:via-[#CB30E3] hover:to-[#FFA84E] active:bg-gradient-to-br active:from-[#A060FF] active:via-[#CB30E3] active:to-[#FFA84E]"
               href="#"
               >Request Beta Access</a
             >
