--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
       rel="stylesheet"
     />
 
+    <link rel="shortcut icon" type="svg" href="/assets/grow-icon.svg" />
+
     <link href="/dist/output.css" rel="stylesheet" />
 
     <title>Suite landing page</title>
