--- a/src/index.html
+++ b/src/index.html
@@ -20,20 +20,26 @@
   </head>
 
   <body class="bg-white font-sans">
-    <header class="max-w-[69.25rem] flex flex-col mt-[50px] mb-[154px] mx-auto">
+    <header
+      class="max-w-[1110px] flex flex-col mt-[50px] mb-[154px] mx-auto xl:px-11"
+    >
       <div class="flex justify-between items-center mb-[67px]">
         <img src="/assets/logo.svg" alt="Suite logo" />
         <a
-          class="items-center border rounded-[6px] border-[#172339] py-[12px] px-[25px] text-blue-dark font-bold hover:bg-blue-dark hover:text-white"
+          class="items-center border rounded-[6px] border-[#172339] py-[12px] px-[25px] text-blue-dark font-bold hover:bg-blue-dark hover:text-cream"
           href="#"
           >Request Beta Access</a
         >
       </div>
-
-      <div class="max-w-[69.375rem] flex flex-row gap-[96px]">
-        <div class="flex flex-col z-[2] relative pr-[12rem] py-[3.105rem]">
+      <div
+        class="max-w-[1110px] flex flex-row gap-[96px] xl:flex-col xl:gap-[54px] xl:mt-[52px]"
+      >
+        <div
+          class="flex flex-col z-[2] relative pr-[12rem] py-[3.105rem] xl:py-[0rem]"
+        >
           <div class="absolute top-0 right-0 z-[-1] w-[350px] h-[600px]">
             <img
+              class=""
               src="/assets/image-hero-portrait@2x.png"
               alt="Phone illustration"
             />
@@ -46,25 +52,34 @@
             />
           </div>
           <div>
-            <h1 class="text-[72px] leading-[78px] text-blue-dark mb-[40px]">
+            <h1
+              class="text-[72px] leading-[78px] text-blue-dark mb-[40px] md:text-[66px] md:leading-[68px] lg:mb-[30px]"
+            >
               A <span class="font-bold">super solution<br /></span> for your
               <span class="font-bold">business.</span>
             </h1>
             <p
-              class="mr-auto text-[18px] text-blue-light leading-[32px] w-[350px] mb-[52px]"
+              class="mr-auto text-[18px] text-blue-light leading-[32px] w-[350px] mb-[52px] lg:mb-[30px]"
             >
               Our marketing and sales automations help you scale your outreach
               to get more leads for your company.
             </p>
             <a
-              class="rounded-[6px] py-[15px] px-[32px] text-white bg-blue-dark font-bold inline-flex hover:bg-gradient-to-br hover:from-[#A060FF] hover:via-[#CB30E3] hover:to-[#FFA84E] active:bg-gradient-to-br active:from-[#A060FF] active:via-[#CB30E3] active:to-[#FFA84E]"
+              class="rounded-[6px] py-[15px] px-[32px] text-cream bg-blue-dark font-bold inline-flex hover:bg-gradient-to-br hover:from-[#A060FF] hover:via-[#CB30E3] hover:to-[#FFA84E] active:bg-gradient-to-br active:from-[#A060FF] active:via-[#CB30E3] active:to-[#FFA84E]"
               href="#"
               >Request Beta Access</a
             >
           </div>
         </div>
-        <div class="flex flex-col gap-[63px] justify-center text-left">
-          <div class="flex flex-col">
+        <img
+          class="hidden w-[100%]"
+          src="/assets/image-hero-landscape@2x.png"
+          alt="Phone illustaryion"
+        />
+        <div
+          class="flex flex-col gap-[63px] justify-center text-left xl:flex-row xl:justify-start md:gap-[45px]"
+        >
+          <div class="flex flex-col xl:text-center">
             <p class="leading-[56px] font-bold text-[48px] text-blue-dark">
               2k+
             </p>
@@ -72,13 +87,13 @@
               Companies
             </p>
           </div>
-          <div class="flex flex-col">
+          <div class="flex flex-col xl:text-center">
             <p class="leading-[56px] font-bold text-[48px] text-blue-dark">8</p>
             <p class="text-blue-light font-normal text-[16px] uppercase">
               Languages
             </p>
           </div>
-          <div class="flex flex-col">
+          <div class="flex flex-col xl:text-center">
             <p class="leading-[56px] font-bold text-[48px] text-blue-dark">
               1.2M
             </p>
@@ -90,22 +105,25 @@
       </div>
     </header>
 
+    <!-- MAIN -->
     <main
-      class="max-w-[69.375rem] mx-auto rounded-[15px] bg-blue-dark text-white flex flex-row mb-[-16rem] relative"
+      class="max-w-[1110px] mx-auto rounded-[15px] bg-blue-dark text-white flex flex-row mb-[-16rem] mt-[254px] relative xl:px-11 lg:flex-col lg:mt-[454px]"
     >
-      <div>
+      <div class="lg:flex lg:justify-center">
         <div class="absolute z-10 ml-[121.49px] mr-[35.9px]">
           <img
-            class="w-[359.81px] mt-[-3.1rem]"
+            class="w-[359.81px] mt-[-3.1rem] lg:flex lg:justify-center lg:mt-[-16rem]"
             src="/assets/image-jeremy-large@2x.png"
             alt="Jeremy Picture"
           />
         </div>
-        <div class="relative z-0">
+        <div class="relative z-0 lg:mt-[-8rem]">
           <img src="/assets/pattern-blur.svg" alt="Pattern blur effect" />
         </div>
       </div>
-      <div class="flex flex-row items-center">
+      <div
+        class="flex flex-row items-center lg:flex-col lg:justify-center lg:text-center"
+      >
         <div class="mr-[52.75px]">
           <img
             class="max-w-[64.05px]"
@@ -113,29 +131,32 @@
             alt="Curved Line"
           />
         </div>
-        <div class="flex flex-col gap-[40px] py-[88px]">
-          <h2 class="text-[48px]">
+        <div class="flex flex-col gap-[40px] py-[88px] lg:pt-[44px]">
+          <h2 class="text-[48px] text-cream">
             It just <span class="font-bold">works.</span>
           </h2>
-          <p class="max-w-[350px] text-[20px] font-normal">
+          <p
+            class="max-w-[350px] text-[20px] font-normal text-cream leading-[35px] lg:max-w-[100%] lg:px-10"
+          >
             “I really like how it is an all-in-one solution that handle many of
             the tasks that you would normally need separate tools to do the same
             job. This thing is a miracle worker.”
           </p>
           <div>
             <p class="text-[18px] font-bold">JEREMY ROBINSON</p>
-            <p class="text-[16px] font-normal">CMO, FYLO</p>
+            <p class="text-[16px] font-normal text-cream">CMO, FYLO</p>
           </div>
         </div>
       </div>
     </main>
 
+    <!-- FOOTER -->
     <footer class="bg-cream h-[464px]">
       <div
-        class="max-w-[69.375rem] flex flex-row justify-between mx-auto items-center pt-[360px] pb-[72px]"
+        class="max-w-[1110px] flex flex-row justify-between mx-auto items-center pt-[360px] pb-[72px] xl:px-11"
       >
         <img src="/assets/logo.svg" alt="Suite logo" />
-        <p>Copyright - Suite</p>
+        <p class="text-[15px] text-blue-light">Copyright - Suite</p>
         <div class="flex flex-row gap-[28px]">
           <a href="#"
             ><svg width="20" height="20" xmlns="http://www.w3.org/2000/svg">
