--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <link rel="shortcut icon" type="svg" href="/assets/grow-icon.svg" />
 
-    <link href="/dist/output.css" rel="stylesheet" />
+    <link href="dist/output.css" rel="stylesheet" />
 
     <title>Suite landing page</title>
   </head>
