--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       class="max-w-[1110px] flex flex-col mt-[50px] mb-[154px] mx-auto xl:px-11 mobile:px-[1.8rem]"
     >
       <div class="flex justify-between items-center mb-[67px] mobile:mb-[32px]">
-        <img class="mobile:mr-6" src="/assets/logo.svg" alt="Suite logo" />
+        <img class="mobile:mr-6" src="assets/logo.svg" alt="Suite logo" />
         <a
           class="items-center text-[16px] border rounded-[6px] border-[#172339] py-[12px] px-[25px] text-blue-dark font-bold hover:bg-blue-dark hover:text-cream mobile:text-[14px]"
           href="#"
@@ -41,14 +41,14 @@
           <div class="absolute top-0 right-0 z-[-1] w-[350px] h-[600px]">
             <img
               class="sm:hidden"
-              src="/assets/image-hero-portrait@2x.png"
+              src="assets/image-hero-portrait@2x.png"
               alt="Phone illustration"
             />
           </div>
           <div>
             <img
               class="w-[287px] h-[36px] mb-[21.32px] ml-[303px] md:ml-[170px] mobile:w-[151.47px] mobile:h-[19px] mobile:ml-[100px]"
-              src="/assets/pattern-curved-line-1.svg"
+              src="assets/pattern-curved-line-1.svg"
               alt="Curved Line"
             />
           </div>
@@ -74,7 +74,7 @@
         </div>
         <img
           class="hidden w-[100%] sm:flex"
-          src="/assets/image-hero-landscape@2x.png"
+          src="assets/image-hero-landscape@2x.png"
           alt="Phone illustaryion"
         />
         <div
@@ -114,12 +114,12 @@
         <div class="absolute z-10 ml-[121.49px] mr-[35.9px]">
           <img
             class="w-[359.81px] mt-[-3.1rem] lg:flex lg:justify-center lg:mt-[-16rem]"
-            src="/assets/image-jeremy-large@2x.png"
+            src="assets/image-jeremy-large@2x.png"
             alt="Jeremy Picture"
           />
         </div>
         <div class="relative z-0 lg:mt-[-8rem]">
-          <img src="/assets/pattern-blur.svg" alt="Pattern blur effect" />
+          <img src="assets/pattern-blur.svg" alt="Pattern blur effect" />
         </div>
       </div>
       <div
@@ -128,7 +128,7 @@
         <div class="mr-[52.75px]">
           <img
             class="max-w-[64.05px]"
-            src="/assets/pattern-curved-line-2.svg"
+            src="assets/pattern-curved-line-2.svg"
             alt="Curved Line"
           />
         </div>
@@ -156,7 +156,7 @@
       <div
         class="max-w-[1110px] flex flex-row justify-between mx-auto items-center pt-[360px] pb-[72px] xl:px-11 mobile:flex-col mobile:gap-[33px] mobile:px-[1.8rem]"
       >
-        <img src="/assets/logo.svg" alt="Suite logo" />
+        <img src="assets/logo.svg" alt="Suite logo" />
         <p class="text-[15px] text-blue-light">Copyright - Suite</p>
         <div class="flex flex-row gap-[28px]">
           <a href="#"
