--- a/index.html
+++ b/index.html
@@ -84,13 +84,17 @@
             <p class="leading-[56px] font-bold text-[48px] text-blue-dark">
               2k+
             </p>
-            <p class="text-blue-light font-normal text-[16px] uppercase">
+            <p
+              class="text-blue-light font-normal text-[16px] uppercase tracking-[.2.5px]"
+            >
               Companies
             </p>
           </div>
           <div class="flex flex-col xl:text-center">
             <p class="leading-[56px] font-bold text-[48px] text-blue-dark">8</p>
-            <p class="text-blue-light font-normal text-[16px] uppercase">
+            <p
+              class="text-blue-light font-normal text-[16px] uppercase tracking-[.2.5px]"
+            >
               Languages
             </p>
           </div>
@@ -98,7 +102,9 @@
             <p class="leading-[56px] font-bold text-[48px] text-blue-dark">
               1.2M
             </p>
-            <p class="text-blue-light font-normal text-[16px] uppercase">
+            <p
+              class="text-blue-light font-normal text-[16px] uppercase tracking-[.2.5px]"
+            >
               Leads
             </p>
           </div>
