--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               2k+
             </p>
             <p
-              class="text-blue-light font-normal text-[16px] uppercase tracking-[.2.5px]"
+              class="text-blue-light font-normal text-[16px] uppercase tracking-[2.5px]"
             >
               Companies
             </p>
@@ -93,7 +93,7 @@
           <div class="flex flex-col xl:text-center">
             <p class="leading-[56px] font-bold text-[48px] text-blue-dark">8</p>
             <p
-              class="text-blue-light font-normal text-[16px] uppercase tracking-[.2.5px]"
+              class="text-blue-light font-normal text-[16px] uppercase tracking-[2.5px]"
             >
               Languages
             </p>
@@ -103,7 +103,7 @@
               1.2M
             </p>
             <p
-              class="text-blue-light font-normal text-[16px] uppercase tracking-[.2.5px]"
+              class="text-blue-light font-normal text-[16px] uppercase tracking-[2.5px]"
             >
               Leads
             </p>
